Remove Data.Lazy and SSeq
darcs-hash:20070320150645-b2b0a-ab84fc8a7ce6dade1adb431735e270d5f9072b6e

--- a/strict.cabal
+++ b/strict.cabal
@@ -13,8 +13,7 @@ exposed-modules:
         Data.Strict.Tuple,
         Data.Strict.Maybe,
         Data.Strict.Either,
-        Data.Strict,
-        Data.Lazy
+        Data.Strict
 build-depends:  base
 ghc-options: -Wall -O
 extensions:     CPP
