Update package description
darcs-hash:20070321124424-b2b0a-9e4671d4df37922daf7c7ca1c7b2b0cfbdd5f16b

--- a/strict.cabal
+++ b/strict.cabal
@@ -9,7 +9,8 @@ License:        BSD3
 License-File:   LICENSE
 Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
 Maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
-Copyright:      (c) 2006-2006 by Roman Leshchinskiy
+Copyright:      (c) 2006-2007 by Roman Leshchinskiy
+Homepage:       http://www.cse.unsw.edu.au/~rl/code/strict.html
 Exposed-Modules:
         Data.Strict.Tuple,
         Data.Strict.Maybe,
