--- a/strict.cabal
+++ b/strict.cabal
@@ -1,14 +1,15 @@
 Name:           strict
-Version:        0.2
-Synopsis:       Strict data types
-Category:       Data
+Version:        0.3
+Synopsis:       Strict data types and String IO.
+Category:       Data, System
 Description:
         This package provides strict versions of some standard Haskell data
-        types (pairs, Maybe and Either at the moment).
+        types (pairs, Maybe and Either). It also contains strict IO
+        operations.
 License:        BSD3
 License-File:   LICENSE
 Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
-Maintainer:     Roman Leshchinskiy <rl@cse.unsw.edu.au>
+Maintainer:     Don Stewart <dons@galois.com>
 Copyright:      (c) 2006-2007 by Roman Leshchinskiy
 Homepage:       http://www.cse.unsw.edu.au/~rl/code/strict.html
 Cabal-Version: >= 1.2
@@ -21,9 +22,10 @@ library
   else
     build-depends:     base < 3
   exposed-modules:
-        Data.Strict.Tuple,
-        Data.Strict.Maybe,
-        Data.Strict.Either,
+        Data.Strict.Tuple
+        Data.Strict.Maybe
+        Data.Strict.Either
         Data.Strict
+        System.IO.Strict
   ghc-options:    -Wall -Werror -O2
   extensions:     CPP
