--- a/strict.cabal
+++ b/strict.cabal
@@ -1,11 +1,11 @@
 Name:           strict
 Version:        0.3.2
-Synopsis:       Strict data types and String IO.
-Category:       Data, System
+Synopsis:       Strict data types, String IO and strict monad sequence.
+Category:       Data, System, Control
 Description:
         This package provides strict versions of some standard Haskell data
         types (pairs, Maybe and Either). It also contains strict IO
-        operations.
+        operations. Reimplements some strict monad sequencing functions.
 License:        BSD3
 License-File:   LICENSE
 Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>
@@ -28,5 +28,6 @@ library
         Data.Strict.Either
         Data.Strict
         System.IO.Strict
+        Control.Monad.Strict
   ghc-options:    -Wall
   extensions:     CPP
