--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -32,6 +32,7 @@ Build-type:     Simple
 
 library
   build-depends:     base >= 4
+  hs-source-dirs:    src
   exposed-modules:
         Data.Strict.Tuple
         Data.Strict.Maybe
