--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -1,5 +1,5 @@
 Name:           strict-base-types
-Version:        0.1.0.0
+Version:        0.1
 Synopsis:       Strict variants of the types provided in base.
 Category:       Data
 Description:
@@ -27,25 +27,26 @@ Description:
      Note that this library does currently not provide fully strict lists.
      They can be added if they are really required. However, in many cases one
      probably wants to use unboxed or strict boxed vectors from the 'vector'
-     library <http://hackage.haskell.org/package/vector> instead of strict
+     library (<http://hackage.haskell.org/package/vector>) instead of strict
      lists.  Moreover, instead of @String@s one probably wants to use strict
      @Text@ values from the @text@ library
-     <http://hackage.haskell.org/package/text>.
+     (<http://hackage.haskell.org/package/text>).
      .
-     This library also provides a 'StrictType' type-class that characterizes
-     types that are strict variants of existing lazy types. The following
-     example shows how this type-class simplifies the interoperability with
-     the existing lazy Haskell types. The example makes use of the @lens@
-     library <http://hackage.haskell.org/package/lens>.
+     This library comes with batteries included; i.e., missing instances
+     for type-classes from the @deepseq@, @binary@, @aeson@, @QuickCheck@, and
+     @lens@ packages are included. Of particluar interest is the @Strict@
+     type-class provided by the lens library
+     (<http://hackage.haskell.org/packages/archive/lens/3.9.0.2/doc/html/Control-Lens-Iso.html#t:Strict>).
+     It is used in the following example to simplify the modification of
+     strict fields.
      .
      > (-# LANGUAGE TemplateHaskell #-)   -- replace with curly braces, 
      > (-# LANGUAGE OverloadedStrings #-) -- the Haddock prologues are a P.I.T.A!
      > 
-     > import           Control.Lens
-     > import           Control.Monad.State.Strict
+     > import           Control.Lens ( (.=), Strict(strict), from, Iso', makeLenses)
+     > import           Control.Monad.State.Strict (State)
      > import qualified Data.Map                   as M
-     > import           Data.Strict.Class (StricType (toStrict, toLazy))
-     > import qualified Data.Strict.Maybe          as S
+     > import qualified Data.Maybe.Strict          as S
      > import qualified Data.Text                  as T
      > 
      > -- | An example of a state record as it could be used in a (very minimal)
@@ -53,24 +54,40 @@ Description:
      > data GameState = GameState
      >     ( _gsCooldown :: !(S.Maybe Int)
      >     , _gsHealth   :: !Int
-     >     )  -- replace with curly braces, *grmbl* 
+     >     )  -- replace with curly braces, *grmbl*
      > 
      > makeLenses ''GameState
      > 
-     > asStrict :: StrictType t => Iso' (LazyVariant t) t
-     > asStrict = iso toStrict toLazy
-     > 
-     > asLazy :: StrictType t => Iso' t (LazyVariant t)
-     > asLazy = iso toLazy toStrict
+     > -- The isomorphism, which converts a strict field to its lazy variant
+     > lazy :: Strict lazy strict => Iso' strict lazy
+     > lazy = from strict
      > 
      > type Game = State GameState
      > 
      > cast :: T.Text -> Game ()
      > cast spell =
-     >     gsCooldown.asLazy .= M.lookup spell spellDuration
+     >     gsCooldown.lazy .= M.lookup spell spellDuration
      >     -- ... implement remainder of spell-casting ...
      >   where
      >     spellDuration = M.fromList [("fireball", 5)]
+     .
+     See
+     <http://www.haskellforall.com/2013/05/program-imperatively-using-haskell.html>
+     for a gentle introduction to lenses and state manipulation.
+     .
+     Note that this package uses the types provided by the 'strict' package
+     (<http://hackage.haskell.org/package/strict>), but organizes them a bit
+     differently. More precisely, the @strict-base-types@ package
+     .
+     - only provides the fully strict variants of types from 'base',
+     .
+     - is in-sync with the current base library (base-4.6), 
+     .
+     - provides the missing instances for (future) Haskell platform packages, and
+     .
+     - conforms to the standard policy that strictness variants of an existing
+       datatype are identified by suffixing \'Strict\' or \'Lazy\' in the
+       module hierarchy.
 
 
 License:        BSD3
@@ -80,22 +97,28 @@ Author:         Roman Leshchinskiy <rl@cse.unsw.edu.au>,
 Maintainer:     Simon Meier <iridcode@gmail.com>
 Copyright:      (c) 2006-2008 by Roman Leshchinskiy
                 (c) 2013 by Simon Meier
-
 Homepage:       https://github.com/meiersi/strict-base-types
-
 Cabal-Version: >= 1.2
 Build-type:     Simple
-
-library
-  build-depends:     base >= 4
-  hs-source-dirs:    src
-  exposed-modules:
-        Data.Strict.Tuple
-        Data.Strict.Maybe
-        Data.Strict.Either
-        Data.Strict.Type.Class
-  ghc-options:    -Wall -ddump-prep
 
 source-repository head
   type:     git
   location: https://github.com/meiersi/strict-base-types.git
+
+library
+  build-depends:     
+      base       >= 4.5
+    , lens       >= 3.9
+    , QuickCheck >= 2
+    , aeson      >= 0.6
+    , binary     >= 0.5
+    , deepseq    >= 1.3
+    , strict     == 0.3.*
+    , ghc-prim
+  hs-source-dirs:    src
+  exposed-modules:
+      Data.Tuple.Strict
+      Data.Maybe.Strict
+      Data.Either.Strict
+  ghc-options:    -Wall
+
