--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -107,7 +107,7 @@ source-repository head
 
 library
   build-depends:     
-      base       >= 4.5
+      base       >= 4.5 && < 5
     , lens       >= 3.9
     , QuickCheck >= 2
     , aeson      >= 0.6
