Add .travis.yml file

--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -100,6 +100,7 @@ Copyright:      (c) 2006-2008 by Roman Leshchinskiy
 Homepage:       https://github.com/meiersi/strict-base-types
 Cabal-Version: >= 1.6
 Build-type:     Simple
+Tested-with:    GHC==7.4.2, GHC==7.6.3, GHC==7.8.4, GHC==7.10.2
 
 source-repository head
   type:     git
