--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -114,6 +114,7 @@ library
     , aeson      >= 0.6
     , binary     >= 0.5
     , deepseq    >= 1.3
+    , hashable   >= 1.1.1.0
     , strict     == 0.3.*
     , bifunctors >= 3.0
     , ghc-prim
