Fix #10: include CHANGES file in extra-source-files.
See
http://stackoverflow.com/questions/21076759/how-to-add-a-changelog-to-a-cabal-package/21076816

--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -102,6 +102,9 @@ Cabal-Version: >= 1.6
 Build-type:     Simple
 Tested-with:    GHC==7.4.2, GHC==7.6.3, GHC==7.8.4, GHC==7.10.2
 
+extra-source-files:
+  CHANGES
+
 source-repository head
   type:     git
   location: https://github.com/meiersi/strict-base-types.git
