--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -1,5 +1,5 @@
 Name:           strict-base-types
-Version:        0.6.0
+Version:        0.6.1
 Synopsis:       Strict variants of the types provided in base.
 Category:       Data
 Description:
@@ -100,7 +100,14 @@ Copyright:      (c) 2006-2008 by Roman Leshchinskiy
 Homepage:       https://github.com/meiersi/strict-base-types
 Cabal-Version: >= 1.6
 Build-type:     Simple
-Tested-with:    GHC==7.4.2, GHC==7.6.3, GHC==7.8.4, GHC==7.10.2
+Tested-with:
+  GHC==7.4.2,
+  GHC==7.6.3,
+  GHC==7.8.4,
+  GHC==7.10.3,
+  GHC==8.0.2,
+  GHC==8.2.2,
+  GHC==8.4.1
 
 extra-source-files:
   CHANGES
@@ -111,6 +118,8 @@ source-repository head
 
 library
   ghc-options:    -Wall -fwarn-incomplete-uni-patterns
+  if impl(ghc >= 8.0)
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
   build-depends:
       base       >= 4.5 && < 5
     , lens       >= 3.9
@@ -119,9 +128,13 @@ library
     , binary     >= 0.5
     , deepseq    >= 1.3
     , hashable   >= 1.1.1.0
-    , strict     == 0.3.*
+    , strict     >= 0.3.2 && <0.4
     , bifunctors >= 3.0
     , ghc-prim
+
+  if !impl(ghc >= 8.0)
+    build-depends: semigroups >= 0.18.3
+
   hs-source-dirs:    src
   exposed-modules:
       Data.Tuple.Strict
