Add GHC-8.6 and 8.8 travis jobs

--- a/strict-base-types.cabal
+++ b/strict-base-types.cabal
@@ -107,7 +107,9 @@ Tested-with:
   GHC==7.10.3,
   GHC==8.0.2,
   GHC==8.2.2,
-  GHC==8.4.1
+  GHC==8.4.4,
+  GHC==8.6.5,
+  GHC==8.8.1
 
 extra-source-files:
   CHANGES
